# xfce4-axisclock-plugin

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  README.md  install.sh  meson.build  uninstall.sh
.github/: FUNDING.yml
data/: meson.build  xfce4-axisclock-plugin.desktop.in
po/: POTFILES.in
src/: calendar_popup.c  calendar_popup.h  clock_widget.c  clock_widget.h  main.c  meson.build  plugin_config.c  plugin_config.h  preferences_dialog.c  preferences_dialog.h  time_formatter.c  time_formatter.h
